refactor(backend): implement M-R-C structure
- Separated App.ts into server.ts and App.ts.
- Created folders for routes, controllers, and models.
- Added Router, Controller, and Model as a starting structure.
- Updated entry point in package.json

--- a/backend/package.json
+++ b/backend/package.json
@@ -2,9 +2,9 @@
   "name": "linkeem-backend",
   "version": "1.0.0",
   "description": "A social media project",
-  "main": "App.ts",
+  "main": "server.ts",
   "scripts": {
-    "dev": "tsx watch src/App.ts",
+    "dev": "tsx watch src/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
