feat(database): add Prisma schema
- Defined models for User, Post, Comment, Like, and Follow in
prisma.schema
- Ran `prisma migrate dev` to create initial database schema
- Generated Prisma Client for database access

--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/ruizterce/linkeem#readme",
   "dependencies": {
+    "@prisma/client": "^5.22.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.1"
   },
