feat(backend): update project build configuration
- Add `build` script to package.json to compile TypeScript
- Configure TypeScript compiler to use `outDir` as `./dist` and
`rootDir` as `./src`
- Update tsconfig.json for better output management and stricter type
checking
- Exclude `dist` directory from version control in `.gitignore`

--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,7 @@
   "main": "server.ts",
   "scripts": {
     "dev": "tsx watch src/server.ts",
+    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
     "db:seed": "npx ts-node prisma/seed.ts"
   },
