--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,7 @@
     "express": "^4.21.1",
     "express-validator": "^7.2.0",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0"
   },
@@ -37,6 +38,7 @@
     "@types/express": "^5.0.0",
     "@types/faker": "^6.6.8",
     "@types/jsonwebtoken": "^9.0.7",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.9.0",
     "@types/passport-local": "^1.0.38",
     "prisma": "^5.22.0",
