--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/ruizterce/linkeem#readme",
   "dependencies": {
     "@prisma/client": "^5.22.0",
+    "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
