--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,8 @@
   "description": "A social media project",
   "main": "server.ts",
   "scripts": {
-    "dev": "tsx watch src/server.ts",
-    "build": "tsc",
+    "dev": "NODE_ENV=development tsx watch src/server.ts",
+    "build": "NODE_ENV=production tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
     "db:seed": "npx ts-node prisma/seed.ts"
   },
